chore: add automation pipeline and API setup updates

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,35 @@
-# Supabase credentials
-# Copy this file to .env.local and fill in your values
-VITE_SUPABASE_URL=https://your-project-id.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key-here
+# Frontend -> Local API
+VITE_API_BASE_URL=http://localhost:8788
+
+# Local API + scripts -> PostgreSQL
+DATABASE_URL=postgresql://jobhunt:CHANGE_ME@localhost:5432/jobhunt
+# Optional if DATABASE_URL not provided:
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_USER=jobhunt
+# DB_PASSWORD=CHANGE_ME
+# DB_NAME=jobhunt
+# DB_SSL=false
+
+# API server settings
+API_PORT=8788
+FRONTEND_ORIGIN=https://jobs.mattlelonek.co.uk,http://localhost:5173
+JOB_SCORE_CUTOFF=12
+
+# Job source credentials
+ADZUNA_APP_ID=your-adzuna-app-id
+ADZUNA_APP_KEY=your-adzuna-app-key
+# Google Workspace MCP (for Gmail intake in gather step)
+# Credentials for the workspace-mcp server — stored in ~/.google_workspace_mcp/credentials/
+GOOGLE_OAUTH_CLIENT_ID=your-google-oauth-client-id
+GOOGLE_OAUTH_CLIENT_SECRET=your-google-oauth-client-secret
+USER_GOOGLE_EMAIL=you@gmail.com
+
+# Claude gather options (optional)
+# CLAUDE_GATHER_MODEL=haiku
+# Override built-in allowed tools (MCP tools are injected separately via mcpServers):
+# CLAUDE_GATHER_ALLOWED_TOOLS=WebSearch,WebFetch
+
+# Automation + notifications (optional)
+SYSTEM_NOTIFY_SCRIPT=/home/matt99is/projects/IntelligencePortal/scripts/system_notify_enqueue.py
+SYSTEM_NOTIFY_PROJECT=job-hunt-dashboard
