--- a/package.json
+++ b/package.json
@@ -5,23 +5,30 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "node server/index.js",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "fetch:adzuna": "node scripts/fetch-adzuna.js",
-    "fetch:reed": "node scripts/fetch-reed.js",
-    "fetch:all": "npm run fetch:adzuna && npm run fetch:reed",
+    "fetch:all": "npm run fetch:adzuna",
     "filter:new": "node scripts/filter-new.js",
     "merge:research": "node scripts/merge-research.js",
     "sync": "node scripts/sync-jobs.js",
     "cleanup:locations": "node scripts/cleanup-locations.js",
     "reset": "node scripts/reset-db.js",
     "update-research": "node scripts/update-research.js",
-    "auto-ghost": "node scripts/auto-ghost.js"
+    "auto-ghost": "node scripts/auto-ghost.js",
+    "db:init": "node scripts/init-db.js",
+    "setup:env": "bash ops/setup/03-create-env-local.sh",
+    "setup:smoke": "bash ops/setup/07-smoke-test.sh",
+    "pipeline:run": "node scripts/run-ai-pipeline.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
+    "@anthropic-ai/claude-agent-sdk": "^0.2.47",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^4.21.2",
+    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
