Pivot pipeline to Gmail+Adzuna and refresh docs/changelog

--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,17 @@ DATABASE_URL=postgresql://jobhunt:CHANGE_ME@localhost:5432/jobhunt
 # DB_PASSWORD=CHANGE_ME
 # DB_NAME=jobhunt
 # DB_SSL=false
+# DB_POOL_MAX=10
+# DB_IDLE_TIMEOUT_MS=30000
 
 # API server settings
 API_PORT=8788
 FRONTEND_ORIGIN=https://jobs.mattlelonek.co.uk,http://localhost:5173
 JOB_SCORE_CUTOFF=12
+JOB_MAX_AGE_DAYS=30
+JOB_MIN_SALARY=50000
+# Optional: dashboard visibility cutoff (defaults to JOB_SCORE_CUTOFF)
+# DASHBOARD_SCORE_CUTOFF=12
 
 # Job source credentials
 ADZUNA_APP_ID=your-adzuna-app-id
@@ -24,11 +30,21 @@ ADZUNA_APP_KEY=your-adzuna-app-key
 GOOGLE_OAUTH_CLIENT_ID=your-google-oauth-client-id
 GOOGLE_OAUTH_CLIENT_SECRET=your-google-oauth-client-secret
 USER_GOOGLE_EMAIL=you@gmail.com
+GMAIL_JOB_LABEL=Jobs
+GMAIL_JOB_LOOKBACK_DAYS=7
 
 # Claude gather options (optional)
 # CLAUDE_GATHER_MODEL=haiku
+# CLAUDE_GATHER_MAX_TURNS=15
+# CLAUDE_GATHER_TIMEOUT_MS=180000
 # Override built-in allowed tools (MCP tools are injected separately via mcpServers):
 # CLAUDE_GATHER_ALLOWED_TOOLS=WebSearch,WebFetch
+
+# Claude research options (optional)
+# CLAUDE_RESEARCH_BATCH_SIZE=8
+# CLAUDE_RESEARCH_MODEL=haiku
+# CLAUDE_RESEARCH_MAX_TURNS=8
+# CLAUDE_RESEARCH_TIMEOUT_MS=2100000
 
 # Automation + notifications (optional)
 SYSTEM_NOTIFY_SCRIPT=/home/matt99is/projects/IntelligencePortal/scripts/system_notify_enqueue.py
